--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,5 @@
 body {
 	background-color: #fafafa;
-
 }
 .container {
 	width: 100%;
@@ -14,8 +13,9 @@ a:focus, a:hover {
 	text-decoration: underline;
 }
 .menu {
+	padding-top: 10px;
 	width: 100%;
-	height: 50px;
+	border-top: 1px solid #eeeeee;
 }
 
 li {
@@ -24,13 +24,14 @@ li {
 	width: 10%;
 	text-align: center;
 	font-size: 20px;
+	min-width: 100px;
 }
 .about {
 	margin-top: 150px;
 }
 p {
 	font-size: 18px;
-	padding: 10px;
+	padding-top: 10px;
 }
 .slideshow {
 	text-align: left;
@@ -40,4 +41,46 @@ p {
 }
 .contact {
 	text-align: left;
+}
+.songslice1 {
+	background-color: #FFFFFF;
+	border-top: 1px solid #eeeeee;
+	border-bottom: 1px solid #eeeeee;
+	height: 440px;
+}
+.songslice2 {
+	background-color: #fafafa;
+	border-top: 1px solid #eeeeee;
+	border-bottom: 1px solid #eeeeee;
+	height: 440px;
+}
+.widget_iframe {
+	display: inline-block;
+	width: 60%;
+	height: 104px;
+	margin: 10px 0 10px 0;
+	padding: 0;
+	border: 0;	
+}
+.song-text {
+	text-align: center;
+	margin-top: 40px;
+}
+.youtube {
+	margin-top: 60px;
+}
+.social {
+	padding: 30px;
+}
+.intro {
+	background-color: #FFFFFF;
+	border-top: 1px solid #eeeeee;
+	border-bottom: 1px solid #eeeeee;
+	height: 500px;
+	padding-top: 10px;
+}
+#profile {
+	border-radius: 450px;
+	height: 85%;
+	margin-top: 30px;
 }
