--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -18,7 +18,7 @@ a:focus, a:hover {
 	border-top: 1px solid #eeeeee;
 }
 
-li {
+.nav > li {
 	display: inline-block;	
 	margin: 0px;
 	width: 10%;
@@ -27,11 +27,13 @@ li {
 	min-width: 100px;
 }
 .about {
-    margin-top: 150px;
     border: 3px solid #751f1f;
     border-radius: 8px;
     background-color: #dedede;
     color: #751f1f;
+    width: 85%;
+    min-width: 450px;
+    margin: auto;
 }
 p {
 	font-size: 18px;
@@ -75,12 +77,13 @@ p {
 }
 .social {
 	padding: 30px;
+	margin-top: 25px;
 }
 .intro {
 	background-color: #666666;
 	border-top: 1px solid #eeeeee;
 	border-bottom: 1px solid #eeeeee;
-	height: 500px;
+	height: 350px;
 	padding-top: 10px;
 	margin-bottom: 20px;
 }
@@ -98,11 +101,13 @@ p {
 .carousel-indicators li {
 	background-color: #ffffff;
 	border: 1px solid black;
+	height: 15px;
+	width: 15px;
 }
 
 .carousel-indicators .active {
-    width: 12px;
-    height: 12px;
+	height: 15px;
+	width: 15px;
     margin: 0;
     background-color: #751f1f;
 }
@@ -120,3 +125,31 @@ p {
 .navbar .navbar-collapse {
   text-align: center;
 }
+img#profile {
+    margin-top: 25px;
+    max-height:300px;
+}
+div#carouselButtons {
+    padding-bottom: 20px;
+}
+.thumbnail {
+	/*width: 200px;*/
+	height: 150px;
+}
+.thumbnail:hover {
+	-webkit-border-radius: 10px;
+	-moz-border-radius: 10px;
+	border-radius: 10px;
+	-webkit-box-shadow: 0px 0px 20px 0px rgba(133, 17, 20, 0.67);
+	-moz-box-shadow:    0px 0px 20px 0px rgba(133, 17, 20, 0.67);
+	box-shadow:         0px 0px 20px 0px rgba(133, 17, 20, 0.67);
+}
+
+
+
+@media only screen and (max-width: 768px) {
+    .intro {
+	    height: 450px;
+	}
+}
+
