--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -76,8 +76,14 @@ p {
 	margin-top: 60px;
 }
 .social {
-	padding: 30px;
+	padding: 0 0 25px 0;
 	margin-top: 25px;
+	border-top: #ffffff;
+    border-bottom: 1px solid #910f1b;
+    border-right: #ffffff;
+    border-left: #ffffff;
+    border-style: double;
+    border-width: 5px;
 }
 .intro {
 	background-color: #666666;
@@ -133,8 +139,10 @@ div#carouselButtons {
     padding-bottom: 20px;
 }
 .thumbnail {
-	/*width: 200px;*/
+	/*max-width:100%;*/
 	height: 150px;
+	margin: auto;
+	margin: 10px 0;
 }
 .thumbnail:hover {
 	-webkit-border-radius: 10px;
@@ -144,8 +152,39 @@ div#carouselButtons {
 	-moz-box-shadow:    0px 0px 20px 0px rgba(133, 17, 20, 0.67);
 	box-shadow:         0px 0px 20px 0px rgba(133, 17, 20, 0.67);
 }
+.imageGallery {
+	margin-left: 10%;
+	margin-right: 10%;
+}
 
+.imageDiv {
+	min-width: 180px;
+}
+body .modal {
+    width: 80%;
+    margin: auto;
+}
+.modal-header, .modal-body {
+	text-align: center;
+}
+p.titleText {
+    font-size: 30px;
+    color: #910f1b;
+}
+.title {
+	border-top: 1px solid#910f1b;
+    border-bottom: 1px solid #910f1b;
+    border-right: #ffffff;
+    border-left: #ffffff;
+    border-style: double;
+    border-width: 5px;
+    margin-top: 30px;
+    margin-bottom: 10px;
+}
 
+.copyright {
+	padding: 20px 0;
+}
 
 @media only screen and (max-width: 768px) {
     .intro {
